--- a/assets/css/templatemo-grad-school.css
+++ b/assets/css/templatemo-grad-school.css
@@ -1720,3 +1720,23 @@ footer p a:hover {
     letter-spacing: 0.25px;
   }
 }
+
+.shake {
+  animation: shake-animation 4.72s ease infinite;
+  transform-origin: 50% 50%;
+}
+/* .element {
+  margin: 0 auto;
+  width: 150px;
+  height: 150px;
+  background: red;
+} */
+@keyframes shake-animation {
+  1.78571% { transform:translate(8px,0) }
+  3.57143% { transform:translate(0,0) }
+  5.35714% { transform:translate(8px,0) }
+  7.14286% { transform:translate(0,0) }
+  8.92857% { transform:translate(8px,0) }
+  10.71429% { transform:translate(0,0) }
+  100% { transform:translate(0,0) }
+}
